syntax = 'proto3';

package proto;

option go_package = "light-up-backend/common/proto";

message IdRequest {
    string id = 1;
}

message EmailRequest {
    string email = 1;
}

message IdsRequest {
    repeated string ids = 1;
}

message Empty {

}

message User {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string password = 4;
    string mobile = 5;
    Location address = 6;
    string profilePictureURL = 7;
    UserTypes type = 8;
    Occupation occupation = 9;
    string educationQualification = 10;
    bool isValid = 11;
}

message Address {
    string addressLine1 = 1;
    string addressLine2 = 2;
    Location location = 3;
}

message Location {
    string city = 1;
    string state = 2;
    string country = 3;
    string zip = 4;
}

enum UserTypes {
    LIGHTER = 0;
    LIGHT_SEEKER = 1;
    ADMIN = 2;
}

message EducationQualification {
    string id = 1;
    string name = 2;
}

enum InstituteType {
    INSTITUTE_TYPE_UNKNOWN = 0;
    INDIVIDUAL = 1;
    EDUCATIONAL_INSTITUTE = 2;
    COUNSELLING_INSTITUTE = 3;
    FOREIGN_STUDY = 4;
    DMIT_CENTER = 5;
}

message Institute {
    string id = 1;
    InstituteType type = 2;
    bool priorCounsellingExperience = 3;
    int32 priorCounsellingExperienceInYears = 4;
    bool isCertified = 5;
    string certificationType = 6;
    Address address = 7;
}

enum OccupationType {
    UNKNOWN = 0;
    STUDENT = 1;
    BUSINESS = 2;
    SALARIED_JOB = 3;
    SELF_EMPLOYED = 4;
    UN_EMPLOYED = 5;
    OTHER = 6;
}

message Occupation {
    string id = 1;
    OccupationType type = 2;
    string name = 3;
}